--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,25 @@
-.hero.is-medium {
+/* .hero.is-medium {
     background-image: url("https://assets.rebelmouse.io/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpbWFnZSI6Imh0dHBzOi8vYXNzZXRzLnJibC5tcy8xOTY0OTg2MC9vcmlnaW4uanBnIiwiZXhwaXJlc19hdCI6MTYxMjQxODUzNn0.zoog319egfzmGavLylSFGt2FDxqJV8lZOa5uOH4XFLY/img.jpg?width=1060&coordinates=0%2C24%2C0%2C25&height=555");
     opacity: 35%;
+} */
+
+.hero.is-medium {
+    position: relative;
+    overflow: hidden;
+}
+
+.hero.is-medium h1,h2 {
+    position: relative;
+    z-index: 2;
+}
+
+.hero.is-medium img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: auto;
+    opacity: 0.3;
 }
